--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1179,7 +1179,7 @@ section {
 
 /* Our Team Section
 --------------------------------*/
-#team {
+/* #team {
   background: #fff;
   padding: 30px 0 0 0;
 }
@@ -1228,7 +1228,7 @@ section {
 #team .member .social i {
   font-size: 16px;
   margin: 0 2px;
-}
+} */
 
 /* Contact Section
 --------------------------------*/
